@@ -4,6 +4,5 @@
 * Find a better way to clean; I don't want to whack .bundler and .rvmrc.
 * Add :only/:except options to Shoe::Tasks.define.
 * Use fuller task descriptions, shown with `rake -D`.
-* Don't use `git ls-files` in the generated gemspec, then call `git` less in the system tests.
 * Remove Launchy? (Follow hub's lead.)
 * Re-think focus: probably want to ditch cucumber, since I'm not using it for shoe?
