@@ -7,13 +7,13 @@ class RakeTest < Test::Unit::TestCase
 
   def setup
     super
-    in_git_project 'foo'
+    in_project 'foo'
     system 'shoe --no-test-unit'
-    system 'git add .'
-    system 'git commit -a -m "Initial commit."'
   end
 
   test 'rake clean removes ignored files' do
+    system 'git init'
+
     write_file '.gitignore', 'bar'
     write_file 'bar', 'NOT LONG FOR THIS WORLD'
 
@@ -70,24 +70,28 @@ class RakeTest < Test::Unit::TestCase
   end
 
   test 'rake release is enabled once the version is greater than 0' do
+    perform_initial_commit
     assert_no_task 'release'
     bump_version_to '0.1.0'
     assert_task 'release'
   end
 
   test 'rake release is disabled if the version has already been tagged' do
+    perform_initial_commit
     bump_version_to '0.1.0'
     system 'git tag v0.1.0'
     assert_no_task 'release'
   end
 
   test 'rake release is disabled if current branch is not master' do
+    perform_initial_commit
     bump_version_to '0.1.0'
     system 'git checkout -b other'
     assert_no_task 'release'
   end
 
   test 'rake release tags, builds, and pushes' do
+    perform_initial_commit
     add_git_remote 'origin'
     bump_version_to '0.1.0'
 
@@ -110,6 +114,7 @@ class RakeTest < Test::Unit::TestCase
   end
 
   test 'rake release depends on rake ronn', :require => 'ronn' do
+    perform_initial_commit
     add_files_for_ronn
     bump_version_to '0.1.0'
 
@@ -226,6 +231,12 @@ class RakeTest < Test::Unit::TestCase
         VERSION = '#{version}'
       end
     END
+  end
+
+  def perform_initial_commit
+    system 'git init'
+    system 'git add .'
+    system 'git commit -a -m "Initial commit."'
   end
 
 end
