@@ -25,7 +25,7 @@ class ShoeTest < Test::Unit::TestCase
   end
 
   test 'running in an existing project does not clobber existing files' do
-    in_git_project 'existing_project'
+    in_project 'existing_project'
     write_file 'Rakefile', '# original'
     system 'shoe'
     assert_match 'WARN: not clobbering existing Rakefile', stderr
@@ -33,28 +33,28 @@ class ShoeTest < Test::Unit::TestCase
   end
 
   test 'running produces a buildable gemspec' do
-    in_git_project 'foo'
+    in_project 'foo'
     system 'shoe'
     system 'gem build foo.gemspec'
     assert_file 'foo-0.0.0.gem'
   end
 
   test 'running generates a module with a VERSION constant' do
-    in_git_project 'foo'
+    in_project 'foo'
     system 'shoe'
     system 'ruby -Ilib -rfoo -e "puts Foo::VERSION"'
     assert_equal '0.0.0', stdout.chomp
   end
 
   test 'running --application generates an executable script' do
-    in_git_project 'foo'
+    in_project 'foo'
     system 'shoe --application'
     system './bin/foo --version'
     assert_equal 'foo 0.0.0', stdout.chomp
   end
 
   test 'running --data generates a datadir helper method' do
-    in_git_project 'foo'
+    in_project 'foo'
     system 'shoe --data'
     write_file 'data/foo/file', 'DATA!'
     system 'ruby -Ilib -rfoo -e "puts Foo.datadir.join(\"file\").read"'
@@ -62,7 +62,7 @@ class ShoeTest < Test::Unit::TestCase
   end
 
   test 'running --extension generates an Extension' do
-    in_git_project 'foo'
+    in_project 'foo'
     system 'shoe --extension'
     Dir.chdir('ext/foo') { system 'ruby extconf.rb && make' }
     system 'ruby -Ilib -Iext -rfoo -e "puts Foo::Extension.name"'
@@ -70,7 +70,7 @@ class ShoeTest < Test::Unit::TestCase
   end
 
   test 'running --test generates passing tests' do
-    in_git_project 'foo'
+    in_project 'foo'
     system 'shoe --test'
     system 'testrb -I. -Ilib test/*_test.rb'
     assert_match '1 tests, 1 assertions, 0 failures, 0 errors', stdout
